Fix bg issue on tablets

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -147,6 +147,7 @@ html, body {
     #background {
       background: image-url('BGedit-small.png');
       background-position: 40% 20%;
+      background-size: cover;
     }
 
     .heading {
